# localization

localization/: CMakeLists.txt  package.xml  setup.py
localization/config/: snot_ekf_config.yaml  snot_ekf_config_most_accurate.yaml
localization/launch/: snot_ekf.launch.py
rf2o_laser_odometry/launch/: rf2o_laser_odometry.launch.py
rf2o_laser_odometry/src/: CLaserOdometry2DNode.cpp
